# doccano-mini

./: .gitignore  LICENSE  Makefile  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
doccano_mini/: app.py  cli.py  components.py  examples.py  home.py  layout.py  models.py  prompts.py  tasks.py  utils.py
doccano_mini/docs/: usage.md
doccano_mini/examples/: named_entity_recognition.json  paraphrase.json  question_answering.json  summarization.json  task_free.json  text_classification.json
doccano_mini/models/: entity.py  stepper.py
doccano_mini/pages/: 01_Text_Classification.py  02_Question_Answering.py  03_Summarization.py  04_Paraphrase.py  05_Named_Entity_Recognition.py  06_(Beta)_Evaluation.py  09_Task_Free.py
doccano_mini/repositories/: entity.py
doccano_mini/storages/: entity.py  session_storage.py  stepper.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
tests/: test_prompts.py
